Navbar and main logo

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /**********************/
-/**** GENERAL**********/
+/* GENERAL */
 /**********************/
 
 * {
@@ -16,5 +16,80 @@ body {
   background-color: #fff;
   line-height: 1;
   font-weight: 400;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn {
+  display: inline-block;
+  list-style: none;
+  text-decoration: none;
+}
+
+/**********************/
+/* NAVBAR */
+/**********************/
+
+.main-nav {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  height: 4.8rem;
+  margin: 0.5rem 1.4rem;
+}
+
+.main-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  list-style: none;
+  font-size: 1.3rem;
+}
+
+.main-nav-link {
+  text-decoration: none;
+  color: #000;
+}
+
+.nav-icon {
+  width: 2rem;
+  height: 2rem;
+  margin: 0 1rem;
+  color: #5f6368;
+}
+
+.btn-nav {
+  padding: 1rem 2.4rem;
+  border-radius: 4px;
+  background-color: #1a73e8;
+  color: #fff;
+}
+
+/**********************/
+/* MAIN */
+/**********************/
+
+.main-section {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+}
+
+.main-logo {
+  margin: 0 62rem;
+}
+
+.logo-img {
+  width: 100%;
+}
+
+.main-search {
+  border: 1px solid #000;
+  border-radius: 30px;
+  padding: 1rem;
+}
+
+.main-search input {
+  border: none;
+  flex: 1;
 }
